<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".about"
    android:orientation="vertical">

    <include
        android:id="@+id/about_toolbar"
        layout="@layout/about_toolbar"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:contentDescription="@string/logo_design"
        android:layout_marginTop="75dp"
        android:src="@drawable/spendeelogo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/sarina"
        android:layout_marginTop="5dp"
        android:text="@string/spendee1"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="35sp" />

    <TextView
        android:layout_width="392dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/architects_daughter"
        android:gravity="center_horizontal"
        android:text="@string/expense_tracker_and_budget_manager"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/vname"
        android:layout_width="392dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/antic_slab"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginTop="0dp"
        android:textSize="18sp" />

    <TextView
        android:layout_width="392dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/julius_sans_one"
        android:gravity="center_horizontal"
        android:text="@string/name1"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />



    <TextView
        android:layout_width="392dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/julius_sans_one"
        android:gravity="center_horizontal"
        android:text="@string/name2"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="18sp" />

</LinearLayout>