<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Profile">

    <include
        android:id="@+id/about_toolbar"
        layout="@layout/profile_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="552dp"
                android:layout_height="287dp"
                android:layout_marginTop="-10dp"
                android:src="@drawable/yellowdesign"
                android:contentDescription="@string/logo_design"/>

            <ImageView
                android:layout_width="225dp"
                android:layout_height="219dp"
                android:layout_marginTop="-110dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:src="@drawable/register_user"
                android:contentDescription="@string/register_user"/>

            <TextView
                android:id="@+id/email_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cousine"
                android:hint="@string/user_email"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_marginTop="-20dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:textSize="20sp"
                android:textColorHint="@android:color/black"
                android:textColor="@android:color/black"
                />

            <Button
                android:id="@+id/btn_changepass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/form_button_bg"
                android:text="@string/change_pass"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black"
                app:backgroundTint="@color/pink"/>

            <Button
                android:id="@+id/btn_deleteaccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/form_button_bg"
                android:text="@string/delete_acc_permanently"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black"
                app:backgroundTint="@color/income_color" />


        </LinearLayout>
    </ScrollView>


</LinearLayout>