<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/amount1"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_margin="10dp"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:id="@+id/amount_edt"
                        android:inputType="numberDecimal"
                        android:autofillHints="phone"
                        android:hint="@string/amount"
                        android:textColor="@color/black"
                        />

                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/type"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_margin="10dp"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:id="@+id/type_edt"
                        android:inputType="text"
                        android:autofillHints="name"
                        android:hint="@string/type_hint"
                        android:textColor="@color/black"
                        />

                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/note1"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_margin="10dp"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:id="@+id/note_edt"
                        android:inputType="text"
                        android:autofillHints="name"
                        android:hint="@string/note_hint"
                        android:textColor="@color/black"
                        />

                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/btnuPD_Delete"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/yellow"
                        android:backgroundTint="@color/yellow"
                        android:text="@string/Delete"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@color/black" />


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/btn_upd_Update"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/yellow"
                        android:backgroundTint="@color/yellow"
                        android:text="@string/update"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@color/black" />

                </RelativeLayout>


            </LinearLayout>



</LinearLayout>