<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="20dp"
    android:layout_height="match_parent"

    android:background="@drawable/background"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/spendee_image"
            android:contentDescription="@string/logo_design"
            android:layout_width="wrap_content"
            android:layout_height="455dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="40dp"
            android:src="@drawable/spendeelogo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="-30dp"
            android:fontFamily="@font/faster_one"
            android:text="@string/spendee1"
            android:id="@+id/spendee_text1"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="50sp"
            android:textStyle="italic" />

        <TextView
            android:layout_width="392dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:minHeight="48dp"
            android:fontFamily="@font/architects_daughter"
            android:gravity="center_horizontal"
            android:text="@string/expense_tracker_and_budget_manager"
            android:id="@+id/spendee_text2"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp" />
</LinearLayout>
</LinearLayout>
