<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:visibility="visible"
    android:background="@drawable/background"
    tools:context=".resetpassword">


        <ImageView
            android:id="@+id/reset_password"
            android:layout_width="251dp"
            android:layout_height="219dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="40dp"
            android:src="@drawable/reset_pass"
            android:contentDescription="@string/reset_pass"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:padding="5dp"
            android:textSize="18sp"
            android:text="@string/email_linked_to_acc" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical"
            android:layout_marginTop="22dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/login_form_bg">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

                <EditText
                    android:id="@+id/pass_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginTop="20dp"
                    android:autofillHints="emailAddress"
                    android:background="@drawable/form_sc_bg"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="#000000"
                    android:visibility="visible"
                    tools:visibility="visible" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/reset_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_margin="10dp"
            android:background="@drawable/form_button_bg"
            android:text="@string/reset_link"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            app:backgroundTint="#D0E1D031" />

        </LinearLayout>


</LinearLayout>